[gd_scene load_steps=12 format=3 uid="uid://w7vbuvefyglq"]

[ext_resource type="Script" uid="uid://bjk0mdvo3ltyo" path="res://build_mode/build_mode.gd" id="1_2vdwl"]
[ext_resource type="Script" uid="uid://bufhsendqclmw" path="res://misc/game_camera.gd" id="2_ggnbw"]
[ext_resource type="Resource" uid="uid://dgc124n34wdwm" path="res://test/driver_only_vehicle_layout.tres" id="2_qsv6l"]
[ext_resource type="PackedScene" uid="uid://b7jvanrnafg43" path="res://build_mode/build_mode_list_item.tscn" id="3_qsv6l"]
[ext_resource type="LabelSettings" uid="uid://cfw65naj2wd0p" path="res://build_mode/stats_label_settings.tres" id="4_c1e2y"]
[ext_resource type="Texture2D" uid="uid://c6fhw4bb2ddc" path="res://assets/art/build_mode/build_mode_grid.png" id="5_wea0h"]
[ext_resource type="FontFile" uid="uid://cuq0hfcm174n" path="res://assets_external/fonts/Jersey_25/Jersey25-Regular.ttf" id="6_8iu1i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wea0h"]
bg_color = Color(0.34656933, 0.34656936, 0.34656924, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wea0h"]
font = ExtResource("6_8iu1i")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_qsv6l"]
font = ExtResource("6_8iu1i")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_kixqc"]
font = ExtResource("6_8iu1i")
font_size = 32

[node name="Build Mode" type="Node2D"]
script = ExtResource("1_2vdwl")
layout = ExtResource("2_qsv6l")
build_list_item_scene = ExtResource("3_qsv6l")
stats_label_settings = ExtResource("4_c1e2y")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 0)
script = ExtResource("2_ggnbw")

[node name="Structure Sprites" type="Node2D" parent="."]

[node name="Part Sprites" type="Node2D" parent="."]
z_index = 1

[node name="Part Sprite" type="Sprite2D" parent="."]
visible = false

[node name="TextureRect Grid" type="TextureRect" parent="."]
custom_minimum_size = Vector2(2048, 2048)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -960.0
offset_right = 1088.0
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_wea0h")
stretch_mode = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="Statsbar" type="PanelContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wea0h")

[node name="MarginContainer" type="MarginContainer" parent="UI/Statsbar"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Stats Panel" type="GridContainer" parent="UI/Statsbar/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Sidebar" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wea0h")

[node name="MarginContainer" type="MarginContainer" parent="UI/Sidebar"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Sidebar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label Credits" type="Label" parent="UI/Sidebar/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits: 100"
label_settings = SubResource("LabelSettings_wea0h")

[node name="HSeparator" type="HSeparator" parent="UI/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Build List Content" type="VBoxContainer" parent="UI/Sidebar/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Button Go" type="Button" parent="UI/Sidebar/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 32
text = "GO"

[node name="Info Panel" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -50.0
offset_right = -400.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_wea0h")

[node name="MarginContainer" type="MarginContainer" parent="UI/Info Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 3

[node name="Label Info" type="Label" parent="UI/Info Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Weight: 10  Hitpoints: 20"
label_settings = SubResource("LabelSettings_qsv6l")

[node name="Tool Panel" type="PanelContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_wea0h")

[node name="MarginContainer" type="MarginContainer" parent="UI/Tool Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Tool Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Tool Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rotate"
label_settings = SubResource("LabelSettings_kixqc")

[node name="Rotate Buttons" type="HBoxContainer" parent="UI/Tool Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Button Rotate Left" type="Button" parent="UI/Tool Panel/MarginContainer/VBoxContainer/Rotate Buttons"]
layout_mode = 2
disabled = true
text = "<-"

[node name="Button Rotate Right" type="Button" parent="UI/Tool Panel/MarginContainer/VBoxContainer/Rotate Buttons"]
layout_mode = 2
disabled = true
text = "->"

[connection signal="gui_input" from="TextureRect Grid" to="." method="_on_texture_rect_grid_gui_input"]
[connection signal="mouse_entered" from="TextureRect Grid" to="." method="_on_texture_rect_grid_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect Grid" to="." method="_on_texture_rect_grid_mouse_exited"]
[connection signal="pressed" from="UI/Sidebar/MarginContainer/VBoxContainer/Button Go" to="." method="_on_button_go_pressed"]
[connection signal="pressed" from="UI/Tool Panel/MarginContainer/VBoxContainer/Rotate Buttons/Button Rotate Left" to="." method="_on_button_rotate_left_pressed"]
[connection signal="pressed" from="UI/Tool Panel/MarginContainer/VBoxContainer/Rotate Buttons/Button Rotate Right" to="." method="_on_button_rotate_right_pressed"]
